[gd_scene load_steps=10 format=3 uid="uid://1ekjvjf5gvp8"]

[ext_resource type="Texture2D" uid="uid://cdh2c2ujr73en" path="res://sprites/towerDefense_tilesheet.png" id="1_p1hno"]
[ext_resource type="Script" path="res://main_scene.gd" id="1_v74v4"]
[ext_resource type="Script" path="res://next_wave_timer.gd" id="2_i6rgi"]
[ext_resource type="Texture2D" uid="uid://dbri2ygargsek" path="res://sprites/icon.svg" id="4_f3xr6"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_0v6fn"]
vertices = PackedVector2Array(32, 32, -32, 32, -32, -32, 32, -32)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)])
source_geometry_group_name = &"navigation_polygon_source_group"
agent_radius = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_llrak"]
texture = ExtResource("1_p1hno")
texture_region_size = Vector2i(64, 64)
2:3/0 = 0
2:3/0/terrain_set = 0
2:3/0/terrains_peering_bit/bottom_left_corner = 0
2:3/0/custom_data_0 = true
1:3/0 = 0
1:3/0/terrain_set = 0
1:3/0/terrains_peering_bit/bottom_right_corner = 0
1:3/0/terrains_peering_bit/bottom_side = 0
1:3/0/terrains_peering_bit/bottom_left_corner = 0
1:3/0/custom_data_0 = true
0:3/0 = 0
0:3/0/terrain_set = 0
0:3/0/terrains_peering_bit/bottom_right_corner = 0
0:3/0/custom_data_0 = true
0:4/0 = 0
0:4/0/terrain_set = 0
0:4/0/terrains_peering_bit/right_side = 0
0:4/0/terrains_peering_bit/bottom_right_corner = 0
0:4/0/terrains_peering_bit/top_right_corner = 0
0:4/0/custom_data_0 = true
1:4/0 = 0
1:4/0/terrain_set = 0
1:4/0/terrain = 0
1:4/0/terrains_peering_bit/right_side = 0
1:4/0/terrains_peering_bit/bottom_right_corner = 0
1:4/0/terrains_peering_bit/bottom_side = 0
1:4/0/terrains_peering_bit/bottom_left_corner = 0
1:4/0/terrains_peering_bit/left_side = 0
1:4/0/terrains_peering_bit/top_left_corner = 0
1:4/0/terrains_peering_bit/top_side = 0
1:4/0/terrains_peering_bit/top_right_corner = 0
1:4/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_0v6fn")
2:4/0 = 0
2:4/0/terrain_set = 0
2:4/0/terrains_peering_bit/bottom_left_corner = 0
2:4/0/terrains_peering_bit/left_side = 0
2:4/0/terrains_peering_bit/top_left_corner = 0
2:4/0/custom_data_0 = true
2:5/0 = 0
2:5/0/terrain_set = 0
2:5/0/terrains_peering_bit/top_left_corner = 0
2:5/0/custom_data_0 = true
1:5/0 = 0
1:5/0/terrain_set = 0
1:5/0/terrains_peering_bit/top_left_corner = 0
1:5/0/terrains_peering_bit/top_side = 0
1:5/0/terrains_peering_bit/top_right_corner = 0
1:5/0/custom_data_0 = true
0:5/0 = 0
0:5/0/terrain_set = 0
0:5/0/terrains_peering_bit/top_right_corner = 0
0:5/0/custom_data_0 = true
4:4/0 = 0
4:4/0/terrain_set = 0
4:4/0/terrain = 0
4:4/0/terrains_peering_bit/right_side = 0
4:4/0/terrains_peering_bit/bottom_right_corner = 0
4:4/0/terrains_peering_bit/bottom_side = 0
4:4/0/terrains_peering_bit/bottom_left_corner = 0
4:4/0/terrains_peering_bit/top_right_corner = 0
4:3/0 = 0
4:3/0/terrain_set = 0
4:3/0/terrain = 0
4:3/0/terrains_peering_bit/right_side = 0
4:3/0/terrains_peering_bit/bottom_right_corner = 0
4:3/0/terrains_peering_bit/top_left_corner = 0
4:3/0/terrains_peering_bit/top_side = 0
4:3/0/terrains_peering_bit/top_right_corner = 0
3:3/0 = 0
3:3/0/terrain_set = 0
3:3/0/terrain = 0
3:3/0/terrains_peering_bit/bottom_left_corner = 0
3:3/0/terrains_peering_bit/left_side = 0
3:3/0/terrains_peering_bit/top_left_corner = 0
3:3/0/terrains_peering_bit/top_side = 0
3:3/0/terrains_peering_bit/top_right_corner = 0
3:4/0 = 0
3:4/0/terrain_set = 0
3:4/0/terrain = 0
3:4/0/terrains_peering_bit/bottom_right_corner = 0
3:4/0/terrains_peering_bit/bottom_side = 0
3:4/0/terrains_peering_bit/bottom_left_corner = 0
3:4/0/terrains_peering_bit/left_side = 0
3:4/0/terrains_peering_bit/top_left_corner = 0
1:1/0 = 0
1:1/0/terrain_set = 0
6:7/0 = 0
6:7/0/modulate = Color(4.412, 0, 19.411, 1)

[sub_resource type="TileSet" id="TileSet_lda50"]
tile_size = Vector2i(64, 64)
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.501961, 0.345098, 0.25098, 1)
terrain_set_1/mode = 0
terrain_set_1/terrain_0/name = "Terrain 0"
terrain_set_1/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
navigation_layer_0/layers = 1
custom_data_layer_0/name = "twr_places"
custom_data_layer_0/type = 1
sources/0 = SubResource("TileSetAtlasSource_llrak")

[sub_resource type="Curve2D" id="Curve2D_58vmd"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 84, 184, 0, 0, 0, 0, 1068, 190, 0, 0, 0, 0, 1076, 385, 0, 0, 0, 0, 914, 398, 0, 0, 0, 0, 846, 343, 0, 0, 0, 0, 559, 333, 0, 0, 0, 0, 509, 403, 0, 0, 0, 0, 153, 410, 0, 0, 0, 0, 138, 934, 0, 0, 0, 0, 1219, 943)
}
point_count = 10

[sub_resource type="Curve2D" id="Curve2D_dmy04"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 59, 30, 0, 0, 0, 0, 1259, 28, 0, 0, 0, 0, 1273, 568, 0, 0, 0, 0, 924, 564, 0, 0, 0, 0, 872, 614, 0, 0, 0, 0, 545, 619, 0, 0, 0, 0, 512, 573, 0, 0, 0, 0, 339, 572, 0, 0, 0, 0, 330, 773, 0, 0, 0, 0, 1293, 787)
}
point_count = 10

[node name="MainScene" type="Node2D"]
script = ExtResource("1_v74v4")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_lda50")
rendering_quadrant_size = 64
format = 2
layer_0/tile_data = PackedInt32Array(65538, 65536, 4, 131074, 65536, 5, 65539, 65536, 4, 131075, 65536, 5, 131076, 65536, 5, 5, 65536, 3, 131077, 65536, 5, 65542, 65536, 4, 6, 65536, 3, 131078, 65536, 5, 196614, 65536, 1, 196613, 65536, 1, 262150, 65536, 1, 262149, 65536, 1, 262151, 65536, 1, 851988, 65536, 4, 851989, 131072, 4, 917523, 65536, 5, 851987, 65536, 4, 786451, 65536, 3, 786452, 65536, 3, 786453, 131072, 3, 851986, 65536, 4, 786450, 65536, 3, 917522, 65536, 5, 851985, 65536, 4, 786449, 65536, 3, 851984, 65536, 4, 917521, 65536, 5, 917520, 65536, 5, 786448, 65536, 3, 851983, 65536, 4, 786447, 65536, 3, 917519, 65536, 5, 851982, 65536, 4, 786446, 65536, 3, 917518, 65536, 5, 851981, 65536, 4, 786445, 65536, 3, 851980, 65536, 4, 917517, 65536, 5, 917516, 65536, 5, 786444, 65536, 3, 851979, 65536, 4, 786443, 65536, 3, 917515, 65536, 5, 851978, 65536, 4, 786442, 65536, 3, 917514, 65536, 5, 851977, 65536, 4, 786441, 65536, 3, 917513, 65536, 5, 851976, 65536, 4, 786440, 65536, 3, 917512, 65536, 5, 851975, 65536, 4, 786439, 65536, 3, 917511, 65536, 5, 786438, 65536, 3, 786437, 65536, 3, 720901, 65536, 1, 720902, 65536, 1, 655365, 65536, 1, 655366, 65536, 1, 720903, 65536, 1, 851974, 65536, 4, 851973, 65536, 4, 655367, 65536, 1, 589830, 65536, 1, 589831, 65536, 1, 524295, 65536, 5, 524296, 262144, 3, 524301, 196608, 3, 524300, 65536, 4, 524299, 65536, 4, 524298, 65536, 4, 524297, 65536, 4, 589832, 0, 5, 589833, 65536, 5, 524302, 65536, 5, 524304, 65536, 5, 524305, 65536, 5, 589841, 65536, 1, 458770, 65536, 4, 458771, 131072, 4, 393234, 65536, 4, 393235, 131072, 4, 327698, 65536, 4, 262162, 65536, 4, 327699, 131072, 4, 262163, 131072, 4, 196626, 65536, 4, 196627, 131072, 4, 131090, 65536, 4, 131091, 131072, 4, 65553, 65536, 4, 65554, 65536, 4, 65552, 65536, 4, 65551, 65536, 4, 131088, 65536, 5, 131087, 65536, 5, 65550, 65536, 4, 131086, 65536, 5, 262157, 65536, 1, 262156, 65536, 1, 262152, 65536, 1, 262153, 65536, 1, 262154, 65536, 1, 327689, 65536, 3, 327690, 65536, 3, 262155, 65536, 1, 327687, 65536, 1, 327686, 65536, 1, 327685, 65536, 1, 327688, 0, 3, 524306, 65536, 5, 589842, 65536, 1, 524307, 131072, 5, 589843, 65536, 1, 917510, 65536, 5, 917509, 65536, 5, 917525, 131072, 5, 917524, 65536, 5, 917508, 65536, 5, 917507, 65536, 5, 917506, 0, 5, 917505, 65536, 1, 8, 65536, 3, 9, 65536, 3, 10, 65536, 3, 720917, 65536, 1, 655381, 65536, 1, 589845, 65536, 1, 524309, 65536, 1, 458773, 65536, 1, 327701, 65536, 1, 262165, 65536, 1, 196629, 65536, 1, 131093, 65536, 1, 65557, 65536, 1, 21, 65536, 1, 20, 65536, 1, 458755, 65536, 4, 393219, 65536, 3, 327683, 65536, 1, 262147, 65536, 1, 196611, 65536, 1, 196610, 65536, 1, 262145, 65536, 1, 327681, 65536, 1, 393217, 65536, 1, 458753, 65536, 1, 524289, 65536, 1, 589825, 65536, 1, 655361, 65536, 1, 720897, 65536, 1, 786433, 65536, 1, 851969, 65536, 1, 851970, 0, 4, 786434, 0, 4, 720898, 0, 4, 655362, 0, 4, 589826, 0, 4, 524290, 0, 4, 458754, 0, 4, 393218, 0, 3, 327682, 65536, 1, 262146, 65536, 1, 524291, 65536, 4, 589827, 65536, 4, 655363, 65536, 4, 720899, 65536, 4, 786435, 65536, 4, 851971, 65536, 4, 851972, 65536, 4, 786436, 196608, 4, 720900, 131072, 4, 655364, 131072, 4, 589828, 131072, 4, 524292, 196608, 3, 458756, 65536, 4, 196612, 65536, 1, 393221, 65536, 3, 393225, 65536, 4, 393226, 65536, 4, 393227, 65536, 4, 393228, 65536, 4, 393230, 65536, 3, 393231, 65536, 3, 327695, 65536, 1, 262159, 65536, 1, 196623, 65536, 1, 196624, 65536, 1, 262160, 65536, 1, 327696, 65536, 1, 393232, 65536, 3, 65545, 65536, 4, 65544, 65536, 4, 131080, 65536, 5, 131081, 65536, 5, 131082, 65536, 5, 65546, 65536, 4, 131083, 65536, 5, 655375, 65536, 1, 655374, 65536, 1, 655373, 65536, 1, 655372, 65536, 1, 655371, 65536, 1, 655370, 65536, 1, 655369, 65536, 1, 655368, 65536, 1, 720904, 65536, 1, 720905, 65536, 1, 720906, 65536, 1, 720907, 65536, 1, 720908, 65536, 1, 720909, 65536, 1, 720910, 65536, 1, 720911, 65536, 1, 720912, 65536, 1, 655376, 65536, 1, 655377, 65536, 1, 720913, 65536, 1, 720914, 65536, 1, 655378, 65536, 1, 655379, 65536, 1, 720915, 65536, 1, 720916, 65536, 1, 655380, 65536, 1, 589844, 65536, 1, 524308, 65536, 1, 458772, 65536, 1, 393236, 65536, 1, 262164, 65536, 1, 196628, 65536, 1, 131092, 65536, 1, 65556, 65536, 1, 524293, 65536, 5, 327684, 65536, 1, 393220, 65536, 3, 589829, 65536, 1, 262148, 65536, 1, 393223, 65536, 3, 393222, 65536, 3, 393224, 262144, 4, 65555, 131072, 4, 327693, 131072, 3, 65549, 65536, 4, 458758, 65536, 4, 327700, 65536, 1, 131089, 262144, 3, 196622, 65536, 1, 196621, 65536, 1, 131085, 65536, 5, 262158, 65536, 1, 196620, 65536, 1, 131084, 65536, 5, 65540, 65536, 4, 65541, 65536, 4, 131073, 65536, 5, 458759, 65536, 4, 458760, 65536, 4, 458761, 65536, 4, 458762, 65536, 4, 589834, 65536, 5, 458763, 65536, 4, 589835, 65536, 5, 458764, 65536, 4, 589836, 65536, 5, 458765, 65536, 4, 589837, 131072, 5, 589838, 65536, 1, 458767, 65536, 4, 524294, 65536, 5, 458757, 65536, 4, 589839, 65536, 1, 458768, 65536, 4, 458769, 65536, 4, 393233, 262144, 4, 327697, 0, 4, 262161, 0, 4, 196625, 0, 4, 65548, 65536, 4, 12, 65536, 3, 13, 65536, 3, 14, 65536, 3, 15, 65536, 3, 16, 65536, 3, 17, 65536, 3, 18, 65536, 3, 19, 131072, 3, 65537, 65536, 4, 1, 65536, 3, 3, 65536, 3, 4, 65536, 3, 65543, 65536, 4, 7, 65536, 3, 131079, 65536, 5, 196615, 65536, 1, 196616, 65536, 1, 196617, 65536, 1, 196618, 65536, 1, 196619, 65536, 1, 327694, 65536, 1, 196609, 65536, 1, 589840, 65536, 1, 524303, 65536, 5, 458766, 65536, 4, 393229, 196608, 4, 327692, 65536, 3, 327691, 65536, 3, 393237, 65536, 1, 11, 65536, 3, 65547, 65536, 4, 2, 65536, 3, 0, 0, 3, 65536, 0, 4, 131072, 0, 5, 262144, 65536, 1, 196608, 65536, 1, 327680, 65536, 1, 393216, 65536, 1, 458752, 65536, 1, 524288, 65536, 1, 589824, 65536, 1, 655360, 65536, 1, 720896, 65536, 1, 786432, 65536, 1, 851968, 65536, 1, 917504, 65536, 1)
layer_1/tile_data = PackedInt32Array()

[node name="NextWaveTimer" type="Label" parent="."]
offset_left = 595.0
offset_top = 14.0
offset_right = 778.0
offset_bottom = 39.0
text = "Next wave in: ? seconds"
script = ExtResource("2_i6rgi")

[node name="TowerPlaceholder" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.501961)
position = Vector2(-100, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_f3xr6")

[node name="Path2D2" type="Path2D" parent="."]
curve = SubResource("Curve2D_58vmd")

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_dmy04")
